--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "Ali Tarek",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-mailjet": "^6.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
